# drupalls

./: .gitignore  .gitmodules  AGENTS.md  CACHE_USAGE.md  DEVELOPMENT_GUIDE.md  LSP_FEATURES_REFERENCE.md  QUICK_REFERENCE_CACHE.md  QUICK_START.md  README.md  STORAGE_STRATEGY.md  TODO.md  draft_lsp_client.py  get_type.py  implementation_report.md  pyproject.toml
docs/: 01-QUICK_START.md  02-WORKSPACE_CACHE_ARCHITECTURE.md  05-DEVELOPMENT_GUIDE.md  05-TEXT_SYNC_ARCHITECTURE.md  06-LSP_FEATURES_REFERENCE.md  07-CACHE_USAGE.md  09-FILE_PATH_BEST_PRACTICES.md  10-COMPLETION_WITH_CACHE.md  11-SERVICE_CLASS_DEFINITION_GUIDE.md  13-QUICK_REFERENCE_CACHE.md  APPENDIX-01-DEVELOPMENT_GUIDE.md  APPENDIX-02-LSP_FEATURES_REFERENCE.md  APPENDIX-03-CACHE_USAGE.md  APPENDIX-04-QUICK_REFERENCE_CACHE.md  APPENDIX-05-TEXT_SYNC_HOOKS_QUICK_REF.md  APPENDIX-10-SERVICE_CLASS_FILE_PATH.md  APPENDIX-11-TEXT_SYNC_HOOKS_QUICK_REF.md  APPENDIX-13-IMPLEMENTING_TEXT_SYNC_MANAGER.md  APPENDIX-14-IMPLEMENTING_CACHE_HOOKS_SERVICES.md  APPENDIX-15-IMPLEMENTING_SERVICE_REFERENCES.md  APPENDIX-16-UPDATING_SERVICE_REFERENCES_FOR_YAML.md  CAPABILITY_PLUGIN_ARCHITECTURE.md  COMPLETION_WITH_CACHE.md  CUSTOM_SERVER_ATTRIBUTES.md  DRUPAL_ROOT_DETECTION.md  IMPLEMENTATION-001-DRUPAL_ROOT_DETECTION.md  IMPLEMENTATION-003-COMPLETION_WITH_CACHE.md  IMPLEMENTATION-005-CUSTOM_SERVER_ATTRIBUTES.md  IMPLEMENTATION-006-SERVICE_CLASS_FILE_PATH.md  IMPLEMENTATION-007-CACHE_SELF_MANAGEMENT_WITH_HOOKS.md  IMPLEMENTATION-008-IMPLEMENTING_TEXT_SYNC_MANAGER.md  IMPLEMENTATION-009-IMPLEMENTING_CACHE_HOOKS_SERVICES.md  (+13 more)
(+91 files in other folders)
