[tool.poetry]
name = "drupalls"
version = "0.1.0"
description = "A Language Server Protocol implementation for Drupal development"
authors = ["Yuri <yuriseki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pygls = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
