[project]
name = "drupalls"
version = "0.1.0"
description = "A Language Server Protocol implementation for Drupal development"
authors = [
    {name = "Yuri Seki",email = "yuriseki@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pygls = ">=2.0.0,<3.0.0"
pyyaml = ">=6.0.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
debugpy = "^1.8.19"
pytest-asyncio = "^1.3.0"
ipython = "^9.9.0"
pynvim = "^0.6.0"
jupyter-client = "^8.8.0"
ipykernel = "^7.1.0"

[project.scripts]
drupalls = "drupalls.main:main"

[[tool.poetry.packages]]
include = "drupalls"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
